--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,11 @@
 @tailwind utilities;
 
 .punchLine {
-  @apply text-[35px] font-[700] text-center;
+  @apply text-[40px] font-[700] text-center;
+}
+.formStyle {
+  @apply text-sm border-[1px] border-gray-700 rounded-lg px-3 focus:outline-none;
+}
+.formGroup {
+  @apply w-[100%] h-[40px];
 }
